# template-dbus-service

./: README.md
src/cli/: arguments.cpp  arguments.h  main.cpp  meson.build  run.cpp  run.h
src/daemon/: daemon.cpp  daemon.h  dbus_service.cpp  main.cpp
src/daemon/unit_tests/: arguments_test.cpp
tools/: check
tools/ci/: Dockerfile  Jenkinsfile
